# WaifuStudio

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
res/: bitmapshow.frag  bitmapshow.vert  icon.qrc  shader.qrc
src/: CMakeLists.txt  id_allocation.cc  layer.cc  layer_bitmap.cc  layer_model.cc  mainwindow.cc  project.cc  psdparser.cc  psdparser.h  tree_manager.cc  viewtree_model.cc
src/app/: main.cc
src/controller/: editmodecontroller.cc  editmodecontroller.h  gabrenderwidget.cc  gabrenderwidget.h
src/include/: id_allocation.h  layer.h  layer_bitmap.h  layer_model.h  layertreeview.h  mainwindow.h  project.h  psdparser.h  tree_manager.h  viewtree_model.h
src/include/model/: layer_bitmap.h  layer_model.h  project.h  tree_manager.h
src/include/views/: layertreeview.h
src/model/: id_allocation.cc  layer.cc  layer.h  layer_bitmap.cc  layer_bitmap.h  layer_model.cc  layer_model.h  layerselectionmodel.cc  layerselectionmodel.h  mainstagescene.cc  mainstagescene.h  mesh.cc  mesh.h  project.cc  project.h  projectservice.cc  projectservice.h  sprite.cc  sprite.h  spriterendergroup.cc  spriterendergroup.h  tree_manager.cc
src/model/command/: controllercommand.cc  controllercommand.h  editcontrollercommand.cc  editcontrollercommand.h
src/model/controller/: editmodecontroller.cc  editmodecontroller.h  gabrenderwidget.cc  gabrenderwidget.h  mesheditor.cc  mesheditor.h  scenecontroller.cc  scenecontroller.h
src/model/parser/: parser.cc  parser.h  psdparser.cc  psdparser.h
src/model/scene/: AbstractDeformer.cc  AbstractDeformer.h  abstractdeformer.cc  abstractdeformer.h  abstractmopher.cc  abstractmopher.h  deformercommand.cc  deformercommand.h  deformmanager.cc  deformmanager.h  editmeshcontroller.cc  editmeshcontroller.h  mainstagescene.cc  mainstagescene.h  mesh.cc  mesh.h  meshcontroller.cc  meshcontroller.h  meshmathtool.hpp  meshrendergroup.h  meshrenndergroup.cc  meshselectcontrollers.cc  meshselectcontrollers.h  mophercommand.cc  mophercommand.h  mophermanager.cc  mophermanager.h  pointeventhandler.cc  pointeventhandler.h  rectselectcontroller.cc  rectselectcontroller.h  scenecontroller.cc  scenecontroller.h  scenecontrollergroup.cc  scenecontrollergroup.h  selectcontrollers.cc  selectcontrollers.h  spriterendergroup.cc  spriterendergroup.h
src/model/scene/deformer/: meshdeformer.cc  meshdeformer.h  mesheditor.cc  mesheditor.h  operatepoint.cc  operatepoint.h  rectangletool.cc  rectangletool.h  rectdeformer.cc  rectdeformer.h
src/model/scene/mesh/: mesh.cc  mesh.h  rendergroup.cc  rendergroup.h
src/model/tree/: layer.cc  layer.h  layermodel.cc  layermodel.h
src/model/tree/undo/: visiblecommand.h  waifucommand.h
src/model/undo/: editfinishcommand.cc  editfinishcommand.h  lockcommand.cc  lockcommand.h  visiblecommand.cc  visiblecommand.h  waifucommand.h
src/ui/: mainwindow.ui
src/views/: iconbutton.cc  iconbutton.h  layertreeview.cc  layertreeview.h  mainglstage.cc  mainglstage.h  mainstagesidetoolbar.cc  mainstagesidetoolbar.h  mainstagetopbar.cc  mainstagetopbar.h  scenetoolbar.cc  scenetoolbar.h
src2/: CMakeLists.txt
src2/model/: idgenerator.cc  idgenerator.h
src2/model/tree/: layer.cc  layer.h  layermodel.cc  layermodel.h
test/: CMakeLists.txt  cdt_test.cc  id_allocation_test.cc  main.cc  mathtool_test.cc  openglscene_test.cc  psdparser_test.cc  spriterendergroup_test.cc  tree_manager_test.cc  uitest_main.cc  viewtree_test.cc
test/test_res/: colorexample.psd  example.psd
